UtahLiveDataTest/src/objects/USDemographicInfo__c.object
<CustomObject>
    <description>[Business] All the Demographic information related to the Zip Codes, Cities ,latitude ,longitudes related to the Cities in North America</description>
    <fields>
        <fullName>AcceptableCities__c</fullName>
        <label>Acceptable Cities</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CongressionalDistrict__c</fullName>
        <label>Congressional District</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>PhoneAreaCodes__c</fullName>
        <label>Phone Area Codes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PrimaryCity__c</fullName>
        <label>Primary City</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateCode__c</fullName>
        <label>State Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateName__c</fullName>
        <label>State Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timezone__c</fullName>
        <label>Timezone</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UNIQUE</fullName>
                </value>
                <value>
                    <fullName>STANDARD</fullName>
                </value>
                <value>
                    <fullName>PO BOX</fullName>
                </value>
                <value>
                    <fullName>MILITARY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnacceptableCities__c</fullName>
        <label>Unacceptable Cities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>MST: Demographics</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>County__c</columns>
        <columns>PhoneAreaCodes__c</columns>
        <columns>PrimaryCity__c</columns>
        <columns>StateCode__c</columns>
        <columns>StateName__c</columns>
        <columns>Timezone__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Zipcode</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MST: Demographics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>